add mybinder link and update goals

--- a/Introducing Notebooks.ipynb
+++ b/Introducing Notebooks.ipynb
@@ -5,6 +5,7 @@
    "id": "a26049ca",
    "metadata": {},
    "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jaredcarter/notebook-tutorials/main?labpath=Introducing%20Notebooks.ipynb)\n",
     "# Exploring Jupyter: Notebooks for teaching and learning Python\n",
     "\n",
     "Jupyter Notebooks, like this one can be used to tell a story or teach a topic by combining text explainations with code that you can run.\n",
@@ -18,7 +19,7 @@
     "\n",
     "## Goals\n",
     "- Open a Jupyter Notebook\n",
-    "- Type headings, lists, and formatted text in Markdown\n",
+    "- Type formatted text in Markdown\n",
     "- Execute print statements and basic math in Python\n",
     "- Investigate basic Notebook features including help, code auto-completion, and restarting the kernel\n",
     "- Compare and contrast local and cloud based options for Jupyter Notebooks\n",
@@ -34,18 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f9b89607",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello, World!\")"
    ]
